syntax = "proto3";

option java_package = "com.programmersbox.mangasettings";
option java_multiple_files = true;

message MangaSettings {
  PlayingStartAction playingStartAction = 1;
  PlayingMiddleAction playingMiddleAction = 2;
  bool useNewReader = 3;
  int32 pagePadding = 4;
  ReaderType readerType = 5;
  ImageLoaderType imageLoaderType = 6;
  bool useFlipPager = 7;
  bool allowUserDrawerGesture = 8;
  bool useFloatingReaderBottomBar = 9;
}

enum PlayingStartAction {
  Battery = 0;
  CurrentChapter = 1;
  None = 2;
}

enum PlayingMiddleAction {
  Time = 0;
  Nothing = 1;
}

enum ImageLoaderType {
  Kamel = 0;
  Glide = 1;
  Coil = 2;
  Panpf = 3;
  Telephoto = 4;
}

enum ReaderType {
  List = 0;
  Pager = 1;
  FlipPager = 2;
  CurlPager = 3;
}